tests/errors/test_working.wyn
fn main() -> int {
    print("Hello");
    return 0;
}